--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
     margin-left: 30px;
     padding: 30px;
     box-shadow: 20px 15px 60px grey;
+    border-radius: 10px;
 }
 
 .selectAmount {
@@ -63,8 +64,46 @@ body {
 .otherAmount {
     margin-top: 100px;
     margin-bottom: 40px;
-
     padding-left: 20%;
     padding-right: 20%;
+}
 
+.DonationPlan h1 {
+    margin-top: 60px;
+    text-align: center;
+    font-size: 2em;
+
+}
+
+#DoPlan {
+    text-align: center;
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+.CardsPlan {
+    display: flex;
+    margin-top: 100px;
+    justify-content: center;
+}
+
+.plan {
+    height: 270px;
+    background-color: aqua;
+    margin: 40px;
+    padding: 30px;
+}
+
+.planTwo {
+    height: 270px;
+    background-color: rgb(201, 227, 103);
+    margin: 40px;
+    padding: 30px;
+}
+
+.planThree {
+    height: 270px;
+    background-color: rgb(227, 140, 227);
+    margin: 40px;
+    padding: 30px;
 }
